objects/Actual_Level_of_Effort__c.object
<CustomObject>
    <description>TOOLKIT - An object that represents the actual level of effort for each requirement.</description>
    <fields>
        <fullName>Adapt_Ongoing_Support__c</fullName>
        <description>Actual level of effort recorded for the Adapt &amp; Ongoing Support phase in a week for a User.</description>
        <inlineHelpText>Actual level of effort recorded for the Adapt &amp; Ongoing Support phase in a week for a User.</inlineHelpText>
        <label>Adapt &amp; Ongoing Support</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Build__c</fullName>
        <description>The actual level of effort recorded for the Build phase in a week for a User.</description>
        <inlineHelpText>The actual level of effort recorded for the Build phase in a week for a User.</inlineHelpText>
        <label>Build</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deploy__c</fullName>
        <description>Actual level of effor recorded for the Deploy phase in a week for a User.</description>
        <inlineHelpText>Actual level of effor recorded for the Deploy phase in a week for a User.</inlineHelpText>
        <label>Deploy</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Design__c</fullName>
        <description>The actual level of effort recorded for the Design phase in a week for a User.</description>
        <inlineHelpText>The actual level of effort recorded for the Design phase in a week for a User.</inlineHelpText>
        <label>Design</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the user that is capturing the actual level of effort for the requirement.</description>
        <inlineHelpText>Name of the user that is capturing the actual level of effort for the requirement.</inlineHelpText>
        <label>Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Actual_Levels_of_Effort</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plan__c</fullName>
        <description>Actual level of effort recorded for the Plan phase in a week for a User.</description>
        <inlineHelpText>Actual level of effort recorded for the Plan phase in a week for a User.</inlineHelpText>
        <label>Plan</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Requirement__c</fullName>
        <description>Relate the actual level of effort to a requirement.</description>
        <label>Requirement</label>
        <referenceTo>Request__c</referenceTo>
        <relationshipLabel>Actual Level of Effort by Week</relationshipLabel>
        <relationshipName>Actual_Levels_of_Effort</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <description>Reflects the role of the user that is entering the actual level of effort</description>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business Architect</fullName>
                </value>
                <value>
                    <fullName>Configuration Resource</fullName>
                </value>
                <value>
                    <fullName>Data Architect</fullName>
                </value>
                <value>
                    <fullName>Data Migration Resource</fullName>
                </value>
                <value>
                    <fullName>Development Resource</fullName>
                </value>
                <value>
                    <fullName>Integration Resource</fullName>
                </value>
                <value>
                    <fullName>Program Manager</fullName>
                </value>
                <value>
                    <fullName>Project Manager</fullName>
                </value>
                <value>
                    <fullName>Solution Architect</fullName>
                </value>
                <value>
                    <fullName>System Admin</fullName>
                </value>
                <value>
                    <fullName>Technical Architect</fullName>
                </value>
                <value>
                    <fullName>Testing Resource</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <description>Actual level of effort recorded for the Test phase in a week for a User.</description>
        <inlineHelpText>Actual level of effort recorded for the Test phase in a week for a User.</inlineHelpText>
        <label>Test</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Actual_Level_of_Effort__c</fullName>
        <description>Total Actual level of effort in a week for a User</description>
        <formula>Plan__c + Design__c + Build__c + Test__c + UAT__c + Deploy__c + Adapt_Ongoing_Support__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Actual Level of Effort</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UAT__c</fullName>
        <description>Actual level of effort recorded for the UAT phase in a week for a User.</description>
        <inlineHelpText>Actual level of effort recorded for the UAT phase in a week for a User.</inlineHelpText>
        <label>UAT</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Week__c</fullName>
        <description>Required Date Field for Actual level of effort, taking week in which efforts need to be calculated.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Week</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Actual Level of Effort</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Actual Level of Effort</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>